Source/WebCore/css/DocumentRuleSets.h
@@ -25,8 +25,7 @@
 
 #include "RuleFeature.h"
 #include "RuleSet.h"
-
-#include <wtf/OwnPtr.h>
+#include <memory>
 #include <wtf/RefPtr.h>
 #include <wtf/Vector.h>
 
@@ -58,11 +57,11 @@ public:
 
 private:
     void collectRulesFromUserStyleSheets(const Vector<RefPtr<CSSStyleSheet>>&, RuleSet& userStyle, const MediaQueryEvaluator&, StyleResolver&);
-    OwnPtr<RuleSet> m_authorStyle;
-    OwnPtr<RuleSet> m_userStyle;
+    std::unique_ptr<RuleSet> m_authorStyle;
+    std::unique_ptr<RuleSet> m_userStyle;
     RuleFeatureSet m_features;
-    OwnPtr<RuleSet> m_siblingRuleSet;
-    OwnPtr<RuleSet> m_uncommonAttributeRuleSet;
+    std::unique_ptr<RuleSet> m_siblingRuleSet;
+    std::unique_ptr<RuleSet> m_uncommonAttributeRuleSet;
 };
 
 } // namespace WebCore
